# ganjoor

./: .gitignore  README.md  pyproject.toml
ganjoor/: __init__.py  exceptions.py  ganjoor.py  types.py
