[project]
name = "ganjoor"
version = "0.1.0"
description = "ad fully typed python sdk for ganjoor.net API"
authors = [
    { name = "Amir Aref", email = "amiraref808@gmail.com" }
]
dependencies = [
    "pydantic>=2.8.2",
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ganjoor"]
